src/test/resources/fail/cyclicgraph/A.scala
//acyclic
package fail.cyclicgraph

class A{
  val e = new E
}
